Fix spacing on homepage

--- a/css/sass/_homepage.scss
+++ b/css/sass/_homepage.scss
@@ -174,6 +174,7 @@
 }
 .home-fullwidth {
     margin: $grid-gutter-width;
+    margin-bottom: 0;
     /* Grid modification to reduce spacing between columns */
     .col-md-4 {
         padding-right: $grid-gutter-width / 2 / 2;
@@ -332,11 +333,12 @@
 }
 .home-tags {
     margin: $grid-gutter-width $grid-gutter-width / 2;
+    margin-top: 0;
     background-color: #fff;
     h2 {
-        margin-bottom: 1em;
+        margin: $grid-gutter-width 0;
     }
 }
 .home-twitter {
-    margin-bottom: $grid-gutter-width;
+    margin-bottom: $grid-gutter-width $grid-gutter-width / 2;
 }
